refactor control structures use newer language features (even preview features)